loader and owl slider working, alignment corrected

--- a/public/assets/sass/style1.css
+++ b/public/assets/sass/style1.css
@@ -161,8 +161,10 @@
                           font-weight: bold;
                           position:  absolute;
                           bottom: 0;
-                          left: -50px;
-                          right: -15px;
+                          /*left: -50px;
+                          right: -15px;*/
+                          left:0;
+                          right:0;
                           padding: 5px 7px;
                           visibility: hidden;
                           opacity: 0;
@@ -301,7 +303,7 @@ background-repeat: no-repeat !important;
                                   text-align: left ;
                                   font-weight:500;
                                   font-size:55px;
-                                  color:#ff4402
+                                  color:#ff4402;
                                   
                               }
                               
@@ -349,8 +351,10 @@ background-repeat: no-repeat !important;
                           font-weight: bold;
                           position:  absolute;
                           bottom: 0;
-                          left: -50px;
-                          right: -15px;
+                          /*left: -50px;
+                          right: -15px;*/
+                          left:0;
+                          right:0;
                           padding: 5px 7px;
                           visibility: hidden;
                           opacity: 0;
@@ -425,7 +429,7 @@ background-repeat: no-repeat !important;
 
 .flip-card {
   background-color: transparent;
-  width: 350px;
+  /*width: 350px;*/
   height: 300px;
   perspective: 1000px;
 }
@@ -957,8 +961,9 @@ margin-left:50px;
 
  .bullettext{
             color:white;
-           margin-bottom: -10px;
-                                    
+           /*margin-bottom: -10px;*/
+    line-height: 1.8em;
+    text-align: left;
           }
           
           
